--- a/src/lowlandtech/wwwroot/index.html
+++ b/src/lowlandtech/wwwroot/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--, maximum-scale=1.0, user-scalable=no-->
-    <title>LowlandTech.Client</title>
+    <title>LowlandTech</title>
     <base href="/" />
     <!-- Google Font: Source Sans Pro -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
